--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,36 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
 
-<%= yield %>
+<body>
+  <!--
+  div class="navbar navbar-inverse navbar-fixed-top" role=
+  	<div class="navbar-inner">
+	  <div class="container">
+	  	<a class="navbar-brand">Treebook</a>
+	  </div>
+	</div>
+  </div>
+-->
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  	<div class="navbar-header">
+		<a class="navbar-brand">Treebook</a>
+	</div>
+
+	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	    <ul class="nav navbar-nav">
+	      <li><%= link_to "All Statuses", statuses_path %></li>
+
+	    </ul>
+
+  	</div><!-- /.navbar-collapse -->
+
+
+  </nav>
+
+  <div class="container">
+	<%= yield %>
+  </div>
 
 </body>
 </html>
