--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,10 @@
   </nav>
 
   <div class="container">
+
+	<p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
 	<%= yield %>
   </div>
 
