--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,37 +8,35 @@
 </head>
 
 <body>
-  <!--
-  div class="navbar navbar-inverse navbar-fixed-top" role=
-  	<div class="navbar-inner">
-	  <div class="container">
-	  	<a class="navbar-brand">Treebook</a>
-	  </div>
-	</div>
-  </div>
--->
+
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   	<div class="navbar-header">
-		<a class="navbar-brand">Treebook</a>
-	</div>
+		  <a class="navbar-brand">Treebook</a>
+	  </div>
 
-	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	    <ul class="nav navbar-nav">
 	      <li><%= link_to "All Statuses", statuses_path %></li>
-
 	    </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li><%= link_to current_user.full_name, edit_user_registration_path %></li>
+          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Register", new_user_registration_path %></li>
+          <li><%= link_to "Log in", new_user_session_path %></li>
+        <% end %>
+      </ul>
 
   	</div><!-- /.navbar-collapse -->
-
-
   </nav>
 
   <div class="container">
 
-	<p class="notice"><%= notice %></p>
+	  <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-	<%= yield %>
+	  <%= yield %>
   </div>
 
 </body>
