--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,10 +33,13 @@
 
   <div class="container">
 
-	  <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-
-	  <%= yield %>
+    <% flash.each do |type, message| %>
+      <div class="alert <%= flash_class type %> alert-dismissable">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        <%= message %>
+      </div>
+    <% end %>
+	<%= yield %>
   </div>
 
 </body>
