--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -6,14 +6,21 @@
 
 <% @statuses.each do |status| %>
   <div class="status">
-    <strong><%= status.user.full_name %></strong>
-    <p><%= status.content %></p>
-    <div class="meta">
-      <%= link_to time_ago_in_words(status.created_at) + " ago", status %>
-      <span class="admin">
-        | <%= link_to "Edit", edit_status_path(status) %> | 
-        <%= link_to "Delete", method: :delete, data: { confirm: 'Are you sure you want to delete this status?'} %>
-      </span>
+    <div class="row">
+      <div class="col-xs-4 col-sm-1">
+        <%= image_tag status.user.gravatar_url %>
+      </div>
+      <div class="col-xs-4 col-sm-7">
+        <strong><%= status.user.full_name %></strong>
+        <p><%= status.content %></p>
+        <div class="meta">
+          <%= link_to time_ago_in_words(status.created_at) + " ago", status %>
+          <span class="admin">
+            | <%= link_to "Edit", edit_status_path(status) %> | 
+            <%= link_to "Delete", method: :delete, data: { confirm: 'Are you sure you want to delete this status?'} %>
+          </span>
+        </div>
+      </div>
     </div>
   </div>
 
