completion of 'Building Social Features in Ruby on Rails'

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,6 +2,17 @@
 	<h1><%= @user.full_name%></h1>
 </div>
 
+<% if signed_in? %>
+	<div id="friend-status">
+		<% if current_user.friends.include?(@user) || current_user.pending_friends.include?(@user) %>
+			<%= link_to "Edit Friendship", edit_user_friendship_path(friend_id: @user), class: 'btn btn-primary' %>
+		<% else %>
+			<%= link_to "Add Friend", new_user_friendship_path(friend_id: @user), class: 'btn btn-primary', id: 'add-friendship', data: {friend_id: @user.to_param} %>
+		<% end %>
+	</div>
+<% end %>
+
+
 <% if @statuses %>
 	<%@statuses.each do |status| %>
 		<div class="well">
