--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -5,23 +5,24 @@
 <%= link_to 'Post a new status', new_status_path, class: "btn btn-success" %>
 
 <% @statuses.each do |status| %>
-  <div class="status">
-    <div class="row">
-      <div class="col-xs-4 col-sm-1">
-        <%= image_tag status.user.gravatar_url %>
-      </div>
-      <div class="col-xs-4 col-sm-7">
-        <strong><%= status.user.full_name %></strong>
-        <p><%= status.content %></p>
-        <div class="meta">
-          <%= link_to time_ago_in_words(status.created_at) + " ago", status %>
-          <span class="admin">
-            | <%= link_to "Edit", edit_status_path(status) %> | 
-            <%= link_to "Delete", method: :delete, data: { confirm: 'Are you sure you want to delete this status?'} %>
-          </span>
+  <% if can_display_status?(status) %>
+    <div class="status">
+      <div class="row">
+        <div class="col-xs-4 col-sm-1">
+          <%= link_to image_tag(status.user.gravatar_url), profile_path(status.user) %>
+        </div>
+        <div class="col-xs-4 col-sm-7">
+          <strong><%= status.user.full_name %></strong>
+          <p><%= status.content %></p>
+          <div class="meta">
+            <%= link_to time_ago_in_words(status.created_at) + " ago", status %>
+            <span class="admin">
+              | <%= link_to "Edit", edit_status_path(status) %> | 
+              <%= link_to "Delete", method: :delete, data: { confirm: 'Are you sure you want to delete this status?'} %>
+            </span>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-
+  <% end %>
 <% end %>
