--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -11,5 +11,8 @@
 <%= @status.content %>
 </p>
 
+
+<%= status_document_link(@status, {:showhr => true}) %>
+
 <%= link_to 'Edit', edit_status_path(@status) %> |
 <%= link_to 'Back', statuses_path %>
