--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,10 +1,28 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+  <fieldset>
+    <legend>About Me</legend>
+    <%= f.input :first_name, input_html: { class: 'input-xxlarge' } %>
+    <%= f.input :last_name, input_html: { class: 'input-xxlarge' } %>
+    <%= f.input :email, input_html: { class: 'input-xxlarge' } %>
+  </fieldset>
+
+  <fieldset>
+    <legend>Profile Picture</legend>
+    <%= f.input :avatar, as: :file %>
+    <% if f.object.avatar? %>
+      <div class="control-group">
+        <label class="control-label">Current avatar</label>
+        <div class="controls">
+          <%= image_tag f.object.avatar.url %>
+        </div>
+    <% end %>
+  </fieldset>
+
+
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
