--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,8 +17,9 @@
       <div class="control-group">
         <label class="control-label">Current avatar</label>
         <div class="controls">
-          <%= image_tag f.object.avatar.url %>
+          <%= image_tag f.object.avatar.url(:small) %>
         </div>
+      </div>
     <% end %>
   </fieldset>
 
