--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,33 +1,21 @@
-<h1>Listing pictures</h1>
+<div class="page-header">
+  <%= link_to 'Add Picture', new_album_picture_path(current_user, @album), class: 'btn btn-default pull-right' %>
+  <h1><%= @album.title %></h1>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Album</th>
-      <th>User</th>
-      <th>Caption</th>
-      <th>Description</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<ul class="thumbnails list-unstyled">
+  <% @pictures.each do |picture| %>
+    <li>
+      <div class="thumbnail">
+        <%= link_to image_tag(picture.asset.url(:small)), album_picture_path(@user, @album, picture) %><br />
+        <div class="caption">
+          <% if picture.caption? %>
+            <%= picture.caption %><br />
+          <% end %>
 
-  <tbody>
-    <% @pictures.each do |picture| %>
-      <tr>
-        <td><%= picture.album %></td>
-        <td><%= picture.user %></td>
-        <td><%= picture.caption %></td>
-        <td><%= picture.description %></td>
-        <td><%= link_to 'Show', picture %></td>
-        <td><%= link_to 'Edit', edit_picture_path(picture) %></td>
-        <td><%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Picture', new_picture_path %>
+          <%= link_to 'View full size', album_picture_path(@user, @album, picture) %>
+        </div>
+      </div>
+    </li>
+  <% end %>
+</ul>
