--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,24 +1,13 @@
-<p id="notice"><%= notice %></p>
+<div class="page-header">
+  <h1>Viewing Picture</h1>
+</div>
 
-<p>
-  <strong>Album:</strong>
-  <%= @picture.album %>
-</p>
+<%= image_tag(@picture.asset.url(:large), alt: @picture.caption, class: 'img-polaroid') %>
 
-<p>
-  <strong>User:</strong>
-  <%= @picture.user %>
-</p>
+<br />
 
-<p>
-  <strong>Caption:</strong>
-  <%= @picture.caption %>
-</p>
+<h3><%= @picture.caption %></h3>
+<p><%= @picture.description %></p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @picture.description %>
-</p>
-
-<%= link_to 'Edit', edit_picture_path(@picture) %> |
-<%= link_to 'Back', pictures_path %>
+<%= link_to 'Edit', edit_album_picture_path(@album, @picture) %> |
+<%= link_to 'Album', album_pictures_path(@album) %>
