Stage 3: Create an Image Gallery - Extracting Helper Methods

--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,5 +1,7 @@
 <div class="page-header">
-  <%= link_to 'Add Picture', new_album_picture_path(current_user, @album), class: 'btn btn-default pull-right' %>
+  <% if signed_in? && current_user == @user %>
+    <%= link_to 'Add Picture', new_album_picture_path(current_user, @album), class: 'btn btn-default pull-right' %>
+  <% end %>
   <h1><%= @album.title %></h1>
 </div>
 
@@ -14,6 +16,10 @@
           <% end %>
 
           <%= link_to 'View full size', album_picture_path(@user, @album, picture) %>
+          <% if can_edit_picture?(picture) %>
+            | <%= link_to "Edit", edit_album_picture_path(@album, picture) %>
+            | <%= link_to "Delete", album_picture_path(@album, picture), method: :delete, data: { confirm: "Are you sure?" } %>
+          <% end %>
         </div>
       </div>
     </li>
