--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -2,11 +2,17 @@
   <h1>Listing albums</h1>
 </div>
 
-<ul class="thumbnails">
+<ul class="thumbnails list-unstyled">
   <% @albums.each do |album| %>
     <li class="span3">
-      <%= link_to album_thumbnail(album), album_pictures_path(album) %><br />
-      <%= link_to "View Album", album_pictures_path(@user, album) %>
+      <div class="thumbnail">
+          <%= link_to album_thumbnail(album), album_pictures_path(album) %><br />
+          <%= link_to "View Album", album_pictures_path(@user, album) %>
+          <% if can_edit_album?(album) %>
+            | <%= link_to "Edit", edit_album_path(album) %>
+            | <%= link_to "Delete", album_path(album), method: :delete, data: { confirm: "Are you sure?" } %>
+          <% end %>
+      </div>
     </li>
   <% end %>
 </ul>
