--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
   </nav>
 
   <div class="container">
-
+    <%= render_breadcrumbs %>
     <% flash.each do |type, message| %>
       <div class="alert <%= flash_class type %> alert-dismissable">
         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
