--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,19 @@
 
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   	<div class="navbar-header">
-		  <a class="navbar-brand">Treebook</a>
+      <% if user_signed_in? %>
+        <%= link_to "Treebook", activities_path, class: 'navbar-brand' %>
+      <% else %>
+        <%= link_to "Treebook", feed_path, class: 'navbar-brand' %>
+      <% end %>
 	  </div>
 
 	  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	    <ul class="nav navbar-nav">
 	      <li><%= link_to "All Statuses", feed_path %></li>
+        <% if user_signed_in? %>
+          <li><%= link_to "Activity Feed", activities_path %></li>
+        <% end %>
 	    </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
