--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
 <body>
 
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   	<div class="navbar-header">
       <% if user_signed_in? %>
         <%= link_to "Treebook", activities_path, class: 'navbar-brand' %>
@@ -22,7 +22,7 @@
 	    <ul class="nav navbar-nav">
 	      <li><%= link_to "All Statuses", feed_path %></li>
         <% if user_signed_in? %>
-          <li><%= link_to "Activity Feed", activities_path %></li>
+          <li id="activity-feed"><%= link_to "Activity Feed", activities_path %></li>
         <% end %>
 	    </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -52,4 +52,16 @@
   </div>
 
 </body>
+
+<script id="activities-template" type="text/x-handlebars-template">
+  <a class="dropdown-toggle" href="#">Activity Feed ({{count}})</a>
+  <ul class="dropdown-menu">
+    {{#each activities}}
+      {{activityLink}}
+    {{/each}}
+    <li class="divider"></li>
+    <li><a href="{{activityFeedLink}}">Activity Feed</a></li>
+  </ul>
+</script>
+
 </html>
